--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,9 +1,9 @@
-<% if flash[:error] -%>
-    <p class='error'><%=h flash[:error] %></p>
-<% end -%>
-<% if flash[:notice] -%>
-    <p class='notice'><%=h flash[:notice] %></p>
-<% end -%>
+<% if flash[:error] %>
+    <p class='error'><%= flash[:error] %></p>
+<% end %>
+<% if flash[:notice] %>
+    <p class='notice'><%= flash[:notice] %></p>
+<% end %>
 
 <div class="hero-unit">
 <h1>My TODO Lists</h1>
